--- a/src/modules/files/rowTemplate.html
+++ b/src/modules/files/rowTemplate.html
@@ -1,4 +1,4 @@
-<div class="row mt-3">
+<div class="row mt-3 folder-row">
     <div class="col-sm-6">
         <div class="card">
             <div class="card-body">
@@ -6,16 +6,23 @@
                     <h5>Folder {{ name }}</h5>
                 </div>
                 <ul>
-                    <li><a href="#">Report File name either Slide or PDF</a>
-                        <span class="badge badge-primary">new</span>
-                    </li>
+                    {{#each children}}
+                        <li>
+                            <a href="#{{ id }}" class="file" data-id="{{ id }}">
+                                {{ name }}
+                            </a>
+                            {{#if isNew}}
+                                <span class="badge badge-primary">new</span>
+                            {{/if}}
+                        </li>
+                    {{/each}}
                 </ul>
             </div>
         </div>
     </div>
     <div class="col-sm-6">
         <div class="card">
-            <div class="card-body">
+            <div class="card-body descriptionDiv">
                 <div class="card-title">
                     <h6>Report File name</h6>
                 </div>
